# RecipeGUI

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md  docker-compose.yml  main.cpp  main.qml
.github/workflows/: codeql.yml
Test/: CMakeLists.txt  main.cpp
recipeApi/: CMakeLists.txt
recipeApi/include/: unitapi.h
recipeApi/src/: unitapi.cpp
